k8s/mlflow-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-model-store-deployment
  labels:
    app: app-model-store
    version: v0.1.0
    env: dev
    team: synthema
    component: model-store
  namespace: synthema-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-model-store-deployment
  template:
    metadata:
      labels:
        app: app-model-store-deployment
    spec:
      containers:
        - name: app-model-store-container
          image: harbor.synthema.rid-intrasoft.eu/synthema/app-model-store:DOCKER_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          command: ["python", "src/main.py"]
      imagePullSecrets:
        - name: harbor-cred
---
apiVersion: v1
kind: Service
metadata:
  name: app-model-store-service
  namespace: synthema-dev
spec:
  type: NodePort
  selector:
    app: app-model-store-deployment
  ports:
    - port: 80
      protocol: TCP
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
#     kubernetes.io/ingress.class: "nginx"
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
#   name: synthema-proxy-mlflow-ingress-rule
#   namespace: synthema-dev
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: proxy-mlflow.k8s.synthema.rid-intrasoft.eu
#       http:
#         paths:
#           - backend:
#               service:
#                 name: synthema-proxy-mlflow
#                 port:
#                   number: 5003
#             path: /
#             pathType: Prefix
#   tls:
#     - hosts:
#         - proxy-mlflow.k8s.synthema.rid-intrasoft.eu
#       secretName: secret-tls
