k8s/mlflow_proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synthema-proxy-mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synthema-proxy-mlflow
  template:
    metadata:
      labels:
        app: synthema-proxy-mlflow
    spec:
      containers:
        - name: synthema-proxy-mlflow
          image: synthema-proxy-mlflow:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5003
---

apiVersion: v1
kind: Service
metadata:
  name: synthema-proxy-mlflow
spec:
  type: NodePort
  selector:
    app: synthema-proxy-mlflow
  ports:
    - port: 5003
      protocol: TCP
      targetPort: 5003
      nodePort: 31002
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: synthema-proxy-mlflow-ingress-rule
  namespace: synthema-dev
spec:
  ingressClassName: nginx
  rules:
    - host: proxy-mlflow.k8s.synthema.rid-intrasoft.eu
      http:
        paths:
          - backend:
              service:
                name: synthema-proxy-mlflow
                port:
                  number: 5003
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - proxy-mlflow.k8s.synthema.rid-intrasoft.eu
      secretName: secret-tls
